      if available
    * Static Web update
        - Apply UI/UX refactoring
        - Add support for max-age cache control
        - Add control of last-modified header for snapshots
        - Add drop zone to files storage
        - Remove manual camera connection dialog
    * Added Force header to api/v1/files/<storage>/<path> DELETE endpoint for
      deletion of non-empty folder

0.7.0rc2
    * Support thermal model errors (FW 3.12)
    * USB Camera
    * SD Card fixes
    * Fix MBL data for MK2.5(S)
    * Wizard refactoring
    * Static web update
        - Cameras
        - File sorting
        - Stop dialog fixed
        - Connect status
    * API Settings moved from Wizard to Settings
    * Raspberry Pi Camera support
    * Added cache control headers for cameras snap endpoints
    * Fixed PUT upload when folders within the path does not exist
    * Cameras! Support for:
        - V4L2 cameras (webcams - MJPEG and YUYV formats supported)
        - picamera2 (libcamera stack) (slow)
        - Changing the resolution
        - Camera auto-detection
        - Triggering on layer change (PrusaSlicer sliced files only!)
    * Fix files with uppercase extensions not showing up locally
    * Support "hotend fan" = "extruder fan"
    * Re-send the complete telemetry every five minutes
    * Fix stats missing for prints of gcodes without M73
    * Fix pause being able to double print time reported
    * Fixed error when trying to get space info of SD Card


0.7.0rc1
    * Work around a bug: printer in serial print mode while wizard is shown
    * READY state changed to IDLE, PREPARED state changed to READY
    * New status display
       - notifies about setup wizard,
       - shows upload progress
       - shows the name of a file being printed
       - notifies about errors
       - shows an idle screen with the IP address after 30min
       - add idle screen and show transfers during print pauses

    * Name and location of printer value validation